# pycurrencies

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Pipfile  README.md  bot.py  pyproject.toml
.github/workflows/: .releaserc.yaml  lint-and-format.yml
pycurrencies/: __init__.py  bitcoin_scrapper.py  dolar_scrapper.py  pycurrencies.py
pycurrencies/scrapers/: __init__.py  dolar_scrapper.py
tests/scrapers/: test_bitcoin_scrapper.py  test_dollar_scrapper.py
utils/: __init__.py  urls.py
