[build-system]
requires = [
    "setuptools ~= 68.2",
    "wheel ~= 0.41.2",
    "setuptools-pipfile ~= 0.7.0",
]

[project]
name = "pycurrencies"
authors = [{name="Tomas Vazquez", email = 'vazquezt2018@gmail.com'}]
version = "0.0.1"
description = "pycurrencies is a package that you can use to take the current value of the dollar in Argentina"
requires-python = ">= 3.8"
readme = "README.md"
keywords = ["web", "dolar", "scrap", "dollar", "currencies"]
dependencies = ['termcolor', 'requests', 'typer', 'bs4']
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
[project.urls]
repository = "https://github.com/vazqueztomas/dolar-scrapper"

[tool.setuptools]

[project.scripts]
dolar-scrap = "pycurrencies.main:main"



